--- a/package.json
+++ b/package.json
@@ -8,7 +8,54 @@
   },
   "author": "WSMARS",
   "license": "ISC",
+  "scripts": {
+    "start": "NODE_ENV=production NODE_PATH=$NODE_PATH:./common node --harmony .",
+    "dev": "NODE_PATH=$NODE_PATH:./common node --harmony .",
+    "test": "jest",
+    "test:watch": "npm test -- --watch"
+  },
   "dependencies": {
-    "express": "^4.14.0"
+    "babel": "^6.5.2",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-class-properties": "^6.16.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.16.0",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "basic-auth": "^1.1.0",
+    "colors": "^1.1.2",
+    "es6-promise": "^4.0.5",
+    "express": "^4.14.0",
+    "moment": "^2.16.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-dropzone": "^3.7.3",
+    "react-images": "^0.5.1",
+    "react-onclickoutside": "^5.7.1",
+    "react-remarkable": "^1.1.1",
+    "react-router": "^2.8.1",
+    "webpack": "^1.13.2"
+  },
+  "devDependencies": {
+    "babel-eslint": "^7.0.0",
+    "babel-jest": "^16.0.0",
+    "enzyme": "^2.6.0",
+    "eslint": "^3.8.1",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-react": "^6.4.1",
+    "eslint-plugin-standard": "^2.0.1",
+    "file-loader": "^0.9.0",
+    "jest": "^16.0.2",
+    "nock": "^9.0.0",
+    "react-addons-test-utils": "^15.4.1",
+    "react-dom": "^15.3.2",
+    "react-transform-hmr": "^1.0.4",
+    "style-loader": "^0.13.1",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-hot-middleware": "^2.13.0"
   }
 }
