--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "basic-auth": "^1.1.0",
+    "body-parser": "^1.15.2",
     "colors": "^1.1.2",
     "es6-promise": "^4.0.5",
     "express": "^4.14.0",
     "moment": "^2.16.0",
+    "nodemailer": "^2.7.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-dropzone": "^3.7.3",
