--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-onclickoutside": "^5.7.1",
     "react-remarkable": "^1.1.1",
     "react-router": "^2.8.1",
+    "react-scroll": "^1.4.4",
     "webpack": "^1.13.2"
   },
   "devDependencies": {
