--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "colors": "^1.1.2",
     "es6-promise": "^4.0.5",
     "express": "^4.14.0",
+    "express-useragent": "^1.0.6",
     "moment": "^2.16.0",
     "nodemailer": "^2.7.0",
     "react": "^15.3.2",
