--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-remarkable": "^1.1.1",
     "react-router": "^2.8.1",
     "react-scroll": "^1.4.4",
+    "react-transition-group": "^1.2.0",
     "webpack": "^1.13.2"
   },
   "devDependencies": {
